Added callback on dialog close

--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -292,7 +292,7 @@
                     <div class="alert alert-success" role="alert">
                     <span class="fa fa-envelope-o fa-3x pull-left"></span>                    
                     Um die Anmeldung abzuschließen, wird eine E-Mail an die angegebene Adresse geschickt.
-                    Sie müssen auf den Link klicken, der in der E-Mail enthalten ist um die Anemldung abzuschließen.
+                    Du musst auf den Link klicken, der in der E-Mail enthalten ist, um die Anmeldung abzuschließen.
                     </div>
                 </div>
                 <div class="modal-footer">
