--- a/imports/client/forms/wysiwyg.html
+++ b/imports/client/forms/wysiwyg.html
@@ -2,13 +2,13 @@
   <div class="ultisite-wysiwyg">
     <div class="btn-toolbar wysiwyg-toolbar" role="toolbar">
       <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default bold" title="Fett"><span class="fa fa-bold"></span></button>
-        <button type="button" class="btn btn-default italic" title="Kursiv"><span class="fa fa-italic"></span></button>
-        <button type="button" class="btn btn-default strikethrough" title="Durchgestrichen"><span class="fa fa-strikethrough"></span></button>
-        <button type="button" class="btn btn-default underline" title="Unterstrichen"><span class="fa fa-underline"></span></button>
+        <button type="button" class="btn btn-default {{#if state.bold}}active{{/if}} bold" title="Fett"><span class="fa fa-bold"></span></button>
+        <button type="button" class="btn btn-default {{#if state.italic}}active{{/if}} italic" title="Kursiv"><span class="fa fa-italic"></span></button>
+        <button type="button" class="btn btn-default {{#if state.strikethrough}}active{{/if}} strikethrough" title="Durchgestrichen"><span class="fa fa-strikethrough"></span></button>
+        <button type="button" class="btn btn-default {{#if state.underline}}active{{/if}} underline" title="Unterstrichen"><span class="fa fa-underline"></span></button>
         <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="fa fa-paint-brush"></span>
+          <button type="button" class="btn btn-default {{#if state.color}}active{{/if}} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="fa fa-paint-brush" style="{{#if state.color}}color:{{state.color}}{{/if}}"></span>
           </button>
           <ul class="dropdown-menu colors">
             <li><a href="#" class="forecolor" data-color="black"><span class="fa fa-square" style="color:black"></span></a></li>
@@ -22,8 +22,8 @@
       </div>
       {{#unless this.light}}
         <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Überschriften">
-            <span class="fa fa-header"></span>
+          <button type="button" class="btn btn-default {{#if state.heading}}active{{/if}} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Überschriften">
+            <span class="fa fa-header"></span>{{state.heading}} 
           </button>
           <ul class="dropdown-menu headings">
             <li><a href="#" class="p">Textblock</a></li>
@@ -34,14 +34,14 @@
           </ul>
         </div>
         <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-default align-justify" title="Blocksatz"><span class="fa fa-align-justify"></span></button>
-          <button type="button" class="btn btn-default align-right" title="Rechts"><span class="fa fa-align-right"></span></button>
-          <button type="button" class="btn btn-default align-center" title="Zentriert"><span class="fa fa-align-center"></span></button>
+          <button type="button" class="btn btn-default {{#if equals state.align "justify"}}active{{/if}} align-justify" title="Blocksatz"><span class="fa fa-align-justify"></span></button>
+          <button type="button" class="btn btn-default {{#if equals state.align "right"}}active{{/if}} align-right" title="Rechts"><span class="fa fa-align-right"></span></button>
+          <button type="button" class="btn btn-default {{#if equals state.align "center"}}active{{/if}} align-center" title="Zentriert"><span class="fa fa-align-center"></span></button>
         </div>
       {{/unless}}
       <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default list-ul" title="Auflistung"><span class="fa fa-list-ul"></span></button>
-        <button type="button" class="btn btn-default list-ol" title="Numerrierte Liste"><span class="fa fa-list-ol"></span></button>
+        <button type="button" class="btn btn-default list-ul {{#if state.listUl}}active{{/if}}" title="Auflistung"><span class="fa fa-list-ul"></span></button>
+        <button type="button" class="btn btn-default list-ol {{#if state.listOl}}active{{/if}}" title="Numerrierte Liste"><span class="fa fa-list-ol"></span></button>
       </div>
       {{#unless this.light}}
         <div class="btn-group" role="group" aria-label="...">
