fixed missing underscore, better wiki editing and status, fixed file dialog association

--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -27,7 +27,7 @@
                                     </div>
                                 </div>
                             {{else}}
-                                {{>fileBrowser inline=true}}
+                                {{>fileBrowser inline=true fileBrowserFolder=initialFolder}}
                             {{/if}}
                         </div>
                     </div>
