--- a/client/wikipage.html
+++ b/client/wikipage.html
@@ -1,41 +1,76 @@
 <template name="wikipage">
 	<div class="wikipage">
-		{{#unless withoutControls}}
-			<ul class="nav nav-tabs hidden-xs wikipage-nav" role="tablist">
-				<li role="presentation" class="active"><a href="#" aria-controls="article" role="tab">Artikel</a></li>
-				<li role="presentation"><a href="#" aria-controls="discussion" role="tab">Diskussion ({{discussions.length}})</a></li>
-				<li role="presentation"><a href="#" aria-controls="edit" role="tab">Bearbeiten</a></li>
-				<li role="presentation"><a href="#" aria-controls="history" role="tab">Historie ({{histories.length}})</a></li>
-			</ul>
-			<div class="tab-content">
-				<div class="dropdown visible-xs pull-right">
-					<button aria-expanded="false" class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button">
-                        <span class="caret"></span>
-                    </button>
-					<ul class="dropdown-menu dropdown-menu-right wikipage-nav" role="menu">
-						<li role="presentation" class="active"><a href="#" aria-controls="article">Artikel</a></li>
-						<li role="presentation"><a href="#" aria-controls="discussion">Diskussion ({{discussions.length}})</a></li>
-						<li role="presentation"><a href="#" aria-controls="edit">Bearbeiten</a></li>
-						<li role="presentation"><a href="#" aria-controls="history">Historie ({{histories.length}})</a></li>
-					</ul>
-				</div>
-				<div role="tabpanel" class="tab-pane active" id="article">
-					<div class="page-heading">
-					{{#if showDiscussions}}
-						<div class="">
-							<h4 class="visible-xs">
-								{{name}}
-								<small>{{discussions.length}} Diskussionsbeiträge</small>
-							</h4>
-							<button class="btn btn-default action-add-discussion">
-								{{#if discussions.length}}
-									Diskussionsbeitrag hinzufügen
-								{{else}}
-									Diskussion starten
-								{{/if}}
+		<div class="page-details">
+			<span class="">
+				{{#with wikiEntry}}
+					Zuletzt geändert am {{formatDate lastChange}}
+					{{#if currentUser}} 
+						{{#if locked}}
+							und wird bearbeitet von {{lockedName}}
+						{{else}}
+							von {{editorName}} 
+						{{/if}}
+						<div class="dropdown">
+							<button aria-expanded="false" class="btn btn-link dropdown-toggle" data-toggle="dropdown" type="button">
+								<span class="fa fa-ellipsis-v"></span>
 							</button>
+							<ul class="dropdown-menu dropdown-menu-right wikipage-nav" role="menu">
+								<li class="dropdown-header">{{name}}</li>
+								<li role="presentation" class="{{#unless showEditStuff}}active{{/unless}}">
+									<a href="#" aria-controls="">Artikel</a></li>
+								<li role="presentation" class="{{#if showDiscussions}}active{{/if}}">
+									<a href="#" aria-controls="discussion">Diskussion ({{discussions.length}})</a>
+								</li>
+								<li role="presentation" class="{{#if showEdit}}active{{/if}}">
+									<a href="#" aria-controls="edit">Bearbeiten</a>
+								</li>
+								<li role="presentation" class="{{#if showHistory}}active{{/if}}">
+									<a href="#" aria-controls="history">Historie ({{histories.length}})</a>
+								</li>
+								<li role="presentation">
+									<a href="#" aria-controls="docs">Dokumente</a>
+								</li>
+								<li class="divider"></li>
+								<li role="presentation">
+									<a href="/wikipage">Seitenübersicht</a>
+								</li>
+							</ul>
 						</div>
+					{{/if}}
+				{{/with}}
+			</span>
+		</div>
+		{{#if showEditStuff}}
+			<div role="tabpanel" class="tab-pane active" id="article">
+				<div class="page-heading">
+					<div class="">
+						<h4 class="visible-xs">
+							{{name}}
+						</h4>
+					</div>
+					{{#if showHistory}}
+					<div class="list-group">
+						{{#each histories}}
+							<div class="list-group-item {{#if equals wikiEntry.contentId _id}}active{{/if}}">
+								Von:{{authorName}}, vom:{{formatDateTime date}}
+								<button class="btn btn-default action-select-version {{#if equals wikiEntry.contentId _id}}disabled{{/if}}">
+									anzeigen
+								</button>
+							</div>
+						{{/each}}
+						</div>
+					{{/if}}
+					{{#if showDiscussions}}
 						<div class="list-group">
+							<div class="list-group-item">
+								<button class="btn btn-default action-add-discussion">
+									{{#if discussions.length}}
+										Diskussionsbeitrag hinzufügen
+									{{else}}
+										Diskussion starten
+									{{/if}}
+								</button>
+							</div>							
 							{{#each discussions}}
 								<div class="list-group-item">
 									<small> {{editorName}} {{formatDateTime date}}</small>
@@ -45,77 +80,42 @@
 								</div>
 							{{/each}}
 						</div>
-					{{else}}
-						{{#with wikiEntry}}
-							<h3>
-								{{name}}
-								{{#if locked}}
-									<small class="page-details">Wird gerade bearbeitet von {{lockedName}}</small>
-								{{else}}
-									<small class="page-details">Zuletzt geändert von {{editorName}} am {{formatDateTime lastChange}}</small>
-								{{/if}}
-							</h3>
-						{{else}}
-							<h4><span class="fa fa-exclamation-triangle"></span> Seite nicht gefunden</h4>
-						{{/with}}
-						<hr/>
-						{{#if showHistory}}
-							{{#each histories}}
-								<div class="list-group-item {{#if equals wikiEntry.contentId _id}}active{{/if}}">
-									Von:{{authorName}}, vom:{{formatDateTime date}}
-									<button class="btn btn-default action-select-version {{#if equals wikiEntry.contentId _id}}disabled{{/if}}">
-                                        anzeigen
-                                    </button>
-								</div>
-							{{/each}}
-							<hr/>
-						{{/if}}
-						{{#if editMode}}
-							{{#unless canEdit}}
-								<h4>
-									<span class="fa fa-exclamation-triangle text-danger"></span> Diese Seite wird gerade von {{wikiEntry.lockedName}}
-									bearbeitet
-								</h4>
-							{{else}}
-								{{>ultisiteWysiwyg value=wikiEntry.content source=wikiEntry}}
-								<button class="btn btn-primary action-save">Übernehmen</button>
-							{{/unless}}
-						{{/if}}
 					{{/if}}
-					</div>
-					{{#unless showDiscussions}}
-						{{#unless editMode}}
-							{{#if Template.subscriptionsReady}}
-								{{{wikiEntry.content}}}
-							{{else}}
-								{{>Loading}}
-							{{/if}}
+					{{#if showDocs}}
+						{{>fileBrowser inline=true fileBrowserFolder=wikiEntry._id}}
+					{{/if}}
+					{{#if editMode}}
+						{{#unless canEdit}}
+							<h4>
+								<span class="fa fa-exclamation-triangle text-danger"></span> Diese Seite wird gerade von {{wikiEntry.lockedName}}
+								bearbeitet
+							</h4>
+						{{else}}
+							{{>ultisiteWysiwyg value=wikiEntry.content source=wikiEntry}}
+							<div class="text-right">
+								<button class="btn btn-default action-cancel">Abbrechen</button>
+								<button class="btn btn-primary action-save">Übernehmen</button>
+							</div>
 						{{/unless}}
-					{{/unless}}
+					{{/if}}
 				</div>
 			</div>
-			{{else}}
-				{{#if Template.subscriptionsReady}}
-					{{#with wikiEntry}}
+		{{else}}
+			{{#if Template.subscriptionsReady}}
+				{{#with wikiEntry}}
+					<div>
 						{{{content}}}
-						<hr />
-						<h6>
-							<small class="page-details">
-									Zuletzt geändert am {{formatDate lastChange}}
-									{{#if currentUser}}
-									<a href="/wikipage/{{_id}}" class="">bearbeiten</a>
-									{{/if}}
-							</small>
-						</h6>
-					{{else}}
-						<h4><span class="fa fa-exclamation-triangle"></span> Seite nicht gefunden</h4>
-					{{/with}}
+					</div>
 				{{else}}
-					{{>Loading}}
-				{{/if}}
-		{{/unless}}
+					<h4><span class="fa fa-exclamation-triangle"></span> Seite nicht gefunden</h4>
+				{{/with}}
+			{{else}}
+				{{>Loading}}
+			{{/if}}
+		{{/if}}
 	</div>
 </template>
+
 <template name="wikipageOverview">
 	{{#if currentUser}}
 		<h4>Alle Wikiseiten</h4>
