some updates, events more text

--- a/client/start.html
+++ b/client/start.html
@@ -96,7 +96,7 @@
     <h5 class="list-group-item-heading cutoff-text action-go-event">
         <a href="#">
             {{name}}
-            <small>{{additional}}</small>
+            <small>{{translate additional}}</small>
         </a>
     </h5>
     {{#each detail}}
