fixed tournament editing, header annoyances

--- a/client/header.html
+++ b/client/header.html
@@ -43,7 +43,7 @@
 					</li>
 				{{/if}}
 			</ul>
-			<ul class="nav navbar-nav pull-left visible-xs">
+			<ul class="nav navbar-nav visible-xs">
 				<li>
 					<a href="#" class="action-toggle-sidebar">
 						<span class="{{#if AdminNotifications.count}}text-info{{/if}} fa fa-bars fa-lg"></span>
