--- a/imports/client/practices/practice.html
+++ b/imports/client/practices/practice.html
@@ -54,10 +54,10 @@
                             {{> afQuickField name='weekday' }}
                         </div>
                         <div class="col-xs-3">
-                            {{> afQuickField name='start' data-date-format='dd.mm.yyyy' data-date-language='de-DE'}}
+                            {{> afQuickField name='start' data-date-format='DD.MM.YYYY' data-date-language='de-DE'}}
                         </div>
                         <div class="col-xs-3">
-                            {{> afQuickField name='end' data-date-format='dd.mm.yyyy' data-date-language='de-DE'}}
+                            {{> afQuickField name='end' data-date-format='DD.MM.YYYY' data-date-language='de-DE'}}
                         </div>
                         <div class="col-xs-3">
                             {{> afQuickField name='startTime'}}
