--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -28,7 +28,7 @@
                                 {{> afQuickField name='category' }}
                             </div>
                             <div class="col-xs-8">
-                                {{> afQuickField name='date' data-date-format='dd.mm.yyyy' data-date-language='de-DE'}}
+                                {{> afQuickField name='date' data-date-format='DD.MM.YYYY' data-date-language='de-DE'}}
                             </div>
                             <div class="col-xs-4">
                                 {{> afQuickField name='numDays'}}
