added github link

--- a/client/header.html
+++ b/client/header.html
@@ -233,5 +233,5 @@
 	<div class="pull-right">
 		<a href="{{pathFor route='wikipage' _id=settings.wikiImpressum}}">Impressum</a>
 	</div>
-	copyright by Lars Wolter
+	<span class="fa fa-github"></span>  <a href="https://github.com/larswolter/ultisite">Quellen und Feedback</a>	
 </template>
