Fixed header, closing dialog on backbutton

--- a/client/dialogs.html
+++ b/client/dialogs.html
@@ -9,16 +9,15 @@
                     <h4 class="modal-title">Suche</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="pull-right">
+                    <div>
                         <input type="checkbox" class="search-type" data-type="Users" checked="checked" />Nutzer
                         <input type="checkbox" class="search-type" data-type="Tournaments" checked="checked" />Turniere
                         <input type="checkbox" class="search-type" data-type="WikiPages" checked="checked" />Wikiseiten
-                        <br />
                         <input type="checkbox" class="search-type" data-type="Blogs" checked="checked" />Artikel
                         <input type="checkbox" class="search-type" data-type="Images" />Bilder
                         <input type="checkbox" class="search-type" data-type="Documents" />Dokumente
                     </div>
-                    {{>searchField inlineResults=true searchType=activeSearch}}
+                    {{>searchField inlineResults=true onResultClick=clickFunc searchType=activeSearch}}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">
