--- a/client/dialogs.html
+++ b/client/dialogs.html
@@ -1,119 +1,139 @@
 <template name="searchDialog">
-    <div class="modal fade" id="confirmDialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <h4 class="modal-title">Suche</h4>
-                </div>
-                <div class="modal-body">
-                    <div>
-                        <input type="checkbox" class="search-type" data-type="Users" checked="checked" />Nutzer
-                        <input type="checkbox" class="search-type" data-type="Tournaments" checked="checked" />Turniere
-                        <input type="checkbox" class="search-type" data-type="WikiPages" checked="checked" />Wikiseiten
-                        <input type="checkbox" class="search-type" data-type="Blogs" checked="checked" />Artikel
-                        <input type="checkbox" class="search-type" data-type="Images" />Bilder
-                        <input type="checkbox" class="search-type" data-type="Documents" />Dokumente
-                    </div>
-                    {{>searchField inlineResults=true onResultClick=clickFunc searchType=activeSearch}}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">
-                        Schließen
-                    </button>
-                </div>
-            </div>
+  <div class="modal fade" id="confirmDialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
+              <span class="fa fa-close"></span>
+          </button>
+          <h4 class="modal-title">Suche</h4>
         </div>
+        <div class="modal-body">
+          <div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "Users"}}checked{{/if}}" data-target="Users">
+                <span class="fa fa-fw {{#if isActive "Users"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Nutzer
+              </button>
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "Tournaments"}}checked{{/if}}" data-target="Tournaments">
+                <span class="fa fa-fw {{#if isActive "Tournaments"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Turniere
+              </button>
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "WikiPages"}}checked{{/if}}" data-target="WikiPages">
+                <span class="fa fa-fw {{#if isActive "WikiPages"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Wikiseiten
+              </button>
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "Blogs"}}checked{{/if}}" data-target="Blogs">
+                <span class="fa fa-fw {{#if isActive "Blogs"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Artikel
+              </button>
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "Images"}}checked{{/if}}" data-target="Images">
+                <span class="fa fa-fw {{#if isActive "Images"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Bilder
+              </button>
+              <button type="button" class="btn btn-default btn-mit-teams {{#if isActive "Documents"}}checked{{/if}}" data-target="Documents">
+                <span class="fa fa-fw {{#if isActive "Documents"}}fa-check-square-o{{else}}fa-square-o{{/if}}"></span>
+                Dokumente
+              </button>
+            </div>
+          </div>
+          {{>searchField inlineResults=true onResultClick=clickFunc searchType=activeSearch}}
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">
+                Schließen
+            </button>
+        </div>
+      </div>
     </div>
+  </div>
 </template>
 
 
 <template name="confirmDialog">
-    <div class="modal fade" id="confirmDialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <h4 class="modal-title">Bestätigung</h4>
-                </div>
-                <div class="modal-body">
-                    {{options.text}}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        Abbrechen
-                    </button>
-                    <button type="button" class="btn btn-default action-confirm">
-                        Bestätigen
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="modal fade" id="confirmDialog">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                      <span class="fa fa-close"></span>
+                  </button>
+                  <h4 class="modal-title">Bestätigung</h4>
+              </div>
+              <div class="modal-body">
+                  {{options.text}}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">
+                      Abbrechen
+                  </button>
+                  <button type="button" class="btn btn-default action-confirm">
+                      Bestätigen
+                  </button>
+              </div>
+          </div>
+      </div>
+  </div>
 </template>
 
 <template name="getTextDialog">
-    <div class="modal fade" id="getTextDialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form >
-                   {{#with options}}
-                    <div class="modal-header">
-                        <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
-                            <span class="fa fa-close"></span>
-                        </button>
-                    <h4 class="modal-title">{{#if header}}{{header}}{{else}}Text eingeben{{/if}}</h4>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" class="form-control text-input" value="{{text}}" autofocus />
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
-                            Abbrechen
-                        </button>
-                        <button type="submit" class="btn btn-default send-text">
-                            Übernehmen
-                        </button>
-                    </div>
-                    {{/with}}
-                </form>
-            </div>
-        </div>
-    </div>
+  <div class="modal fade" id="getTextDialog">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <form >
+                  {{#with options}}
+                  <div class="modal-header">
+                      <button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                          <span class="fa fa-close"></span>
+                      </button>
+                  <h4 class="modal-title">{{#if header}}{{header}}{{else}}Text eingeben{{/if}}</h4>
+                  </div>
+                  <div class="modal-body">
+                      <input type="text" class="form-control text-input" value="{{text}}" autofocus />
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">
+                          Abbrechen
+                      </button>
+                      <button type="submit" class="btn btn-default send-text">
+                          Übernehmen
+                      </button>
+                  </div>
+                  {{/with}}
+              </form>
+          </div>
+      </div>
+  </div>
 </template>
 
 <template name="getHTMLTextDialog">
-    <div class="modal fade" id="getHTMLTextDialog">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                {{#with options}}
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <h4 class="modal-title">{{#with this.header}}{{this}}{{else}}Text eingeben{{/with}}</h4>
-                </div>
-                <div class="">
-                    {{#if wysiwygLoaded}}
-                        {{>ultisiteWysiwyg light=true value=content source=this}}
-                    {{else}}
-                        {{>Loading}}
-                    {{/if}}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        Abbrechen
-                    </button>
-                    <button type="button" class="btn btn-primary action-save">
-                        Übernehmen
-                    </button>
-                </div>
-                {{/with}}
-            </div>
-        </div>
-    </div>
+  <div class="modal fade" id="getHTMLTextDialog">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+              {{#with options}}
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span class="fa fa-close"></span>
+                  </button>
+                  <h4 class="modal-title">{{#with this.header}}{{this}}{{else}}Text eingeben{{/with}}</h4>
+              </div>
+              <div class="">
+                  {{#if wysiwygLoaded}}
+                      {{>ultisiteWysiwyg light=true value=content source=this}}
+                  {{else}}
+                      {{>Loading}}
+                  {{/if}}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">
+                      Abbrechen
+                  </button>
+                  <button type="button" class="btn btn-primary action-save">
+                      Übernehmen
+                  </button>
+              </div>
+              {{/with}}
+          </div>
+      </div>
+  </div>
 </template>
