--- a/client/search.html
+++ b/client/search.html
@@ -1,13 +1,12 @@
 <template name="searchField">
-	<div class="form-group {{#unless inlineResults}}dropdown{{/unless}}" style="{{#if inline}}display:inline-flex;vertical-align:middle;margin:0px;{{/if}}">
+	<div class="form-group {{#unless inlineResults}}dropdown{{/unless}}" 
+  style="">
 		{{#if equals type "button"}}
-			<button class="btn btn-default" data-toggle="dropdown">
-            <span class="{{#if icon}}{{icon}}{{else}}fa fa-search{{/if}}"></span> {{buttonText}}
-        </button>
+		  <button class="btn btn-default" data-toggle="dropdown">
+        <span class="{{#if icon}}{{icon}}{{else}}fa fa-search{{/if}}"></span> {{buttonText}}
+      </button>
 		{{else}}
-			<div class="input-group" data-toggle="{{#unless inlineResults}}dropdown{{/unless}}">
-				<input autofocus="autofocus" type="text" class="search-field form-control fa {{class}}" placeholder="&#xf002; {{placeHolder}}" value="{{value}}">
-			</div>
+      <input autofocus="autofocus" type="text" class="search-field form-control fa {{class}}" placeholder="&#xf002; {{placeHolder}}" value="{{value}}">
 		{{/if}}
 		<ul class="{{#unless inlineResults}}dropdown-menu {{#unless leftMenu}}dropdown-menu-right{{/unless}}{{else}}list-group{{/unless}}" role="menu">
 			{{#if equals type "button"}}
@@ -21,16 +20,14 @@
 			{{#if ../inlineResults}}
 				<a href="#" class="list-group-item">
 					{{#if name}}
-						<a href="{{link}}" title="{{name}}">
-                            {{#if isImage}}
-                                <img src="{{imageUrl id '80x60'}}" title="{{name}}"/> {{name}}
-                            {{else}}
-                                <span class="fa {{icon}}"></span> {{name}}
-                                {{#if additional}}
-                                    <small class="hidden-xs">{{additional}}</small>
-                                {{/if}}
-                            {{/if}}
-                        </a>
+						{{#if isImage}}
+							<img src="{{imageUrl id '80x60'}}" title="{{name}}"/> {{name}}
+						{{else}}
+							<span class="fa {{icon}}"></span> {{name}}
+							{{#if additional}}
+								<small class="hidden-xs">{{additional}}</small>
+							{{/if}}
+						{{/if}}
 					{{else}}
 						{{{this}}}
 					{{/if}}
