--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -23,7 +23,7 @@
                                         Suche nach Dateien
                                     </div>
                                     <div class="panel-body">
-                                        {{>searchField class="form-control" searchType="Images" onResultClick=dialogSelection inlineResults=true}}
+                                        {{>searchField class="form-control" searchType="Images,Documents" onResultClick=dialogSelection inlineResults=true}}
                                     </div>
                                 </div>
                             {{else}}
